# RLM-demo

./: Dockerfile  README.md
Backend/: .env  experiment.ipynb  main.py  pyproject.toml  repl_process.py  requirements.txt
Backend/answer/: answer_10.json  answer_11.json  answer_12.json  answer_13.json  answer_14.json  answer_3.json  answer_4.json  answer_5.json  answer_6.json  answer_7.json  answer_8.json  answer_9.json
Backend/data/: dataset_0.json  dataset_1.json  dataset_12.json  dataset_13.json  dataset_2.json  dataset_6.json  dataset_9.json
Backend_tmp/: README.md
Backend_tmp/data/: dataset_11.json  dataset_14.json  dataset_4.json
backend/: loading_index.json  main.py  repl_process.py
backend/answer/: answer_0.json  answer_1.json  answer_10.json  answer_11.json  answer_12.json  answer_13.json  answer_14.json  answer_2.json  answer_3.json  answer_4.json  answer_5.json  answer_6.json  answer_7.json  answer_8.json  answer_9.json
backend/data/: dataset_3.json  dataset_5.json  dataset_7.json  dataset_8.json
frontend/: next.config.ts
frontend/app/: page.tsx
frontend/app/components/: ChatExpandToggle.tsx  RoleBadge.tsx  constants.ts  getMessageBg.ts
frontend/app/components/icons/: ChatIcons.tsx
frontend/app/types/: api.ts  dataset.ts  index.ts  trace.ts
frontend/app/utils/: transformTrace.ts  truncate.ts
