[project]
name = "rlm-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "huggingface-hub>=1.3.1",
    "ipykernel>=7.1.0",
    "openenv>=0.1.13",
    "openenv-core",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "smolagents>=1.22.0",
    "uvicorn>=0.40.0",
]

[tool.uv.sources]
openenv-core = { git = "https://github.com/meta-pytorch/OpenEnv.git" }
